# employees-database

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: cli.h  date.h  employee.h  employee_database.h  serialize.h
src/: cli.c  date.c  employee.c  employee_database.c  serialize.c
